syntax = "proto3";

option go_package = "github.com/beam-cloud/airstore/proto";

package context;

// ContextService provides S3-backed file storage for workspace context.
// The workspace is determined by the auth token - paths are relative to /context.
service ContextService {
  // Stat returns file/directory attributes
  rpc Stat(ContextStatRequest) returns (ContextStatResponse);
  
  // ReadDir lists directory contents
  rpc ReadDir(ContextReadDirRequest) returns (ContextReadDirResponse);
  
  // Read reads file content
  rpc Read(ContextReadRequest) returns (ContextReadResponse);
  
  // Write writes file content (creates if not exists)
  rpc Write(ContextWriteRequest) returns (ContextWriteResponse);
  
  // Create creates a new empty file
  rpc Create(ContextCreateRequest) returns (ContextCreateResponse);
  
  // Delete removes a file or empty directory
  rpc Delete(ContextDeleteRequest) returns (ContextDeleteResponse);
  
  // Mkdir creates a directory
  rpc Mkdir(ContextMkdirRequest) returns (ContextMkdirResponse);
  
  // Rename moves/renames a file or directory
  rpc Rename(ContextRenameRequest) returns (ContextRenameResponse);
  
  // Truncate changes file size
  rpc Truncate(ContextTruncateRequest) returns (ContextTruncateResponse);
  
  // Symlink creates a symbolic link
  rpc Symlink(ContextSymlinkRequest) returns (ContextSymlinkResponse);
  
  // Readlink reads a symbolic link target
  rpc Readlink(ContextReadlinkRequest) returns (ContextReadlinkResponse);
  
  // ListTree returns a flat listing of all objects under a prefix (for prefetching)
  rpc ListTree(ListTreeRequest) returns (ListTreeResponse);
}

// FileInfo contains file/directory metadata
message FileInfo {
  int64 size = 1;
  uint32 mode = 2;
  int64 mtime = 3;  // Unix timestamp
  bool is_dir = 4;
  bool is_link = 5;
}

// DirEntry represents a directory entry with full metadata
message ContextDirEntry {
  string name = 1;
  uint32 mode = 2;
  bool is_dir = 3;
  int64 size = 4;      // From ListObjectsV2 - avoids separate HeadObject
  int64 mtime = 5;     // From ListObjectsV2 - Unix timestamp
  string etag = 6;     // From ListObjectsV2 - for cache validation
}

// Stat
message ContextStatRequest {
  string path = 1;  // Path relative to /context (e.g., "foo/bar.txt")
}

message ContextStatResponse {
  bool ok = 1;
  string error = 2;
  FileInfo info = 3;
}

// ReadDir
message ContextReadDirRequest {
  string path = 1;
}

message ContextReadDirResponse {
  bool ok = 1;
  string error = 2;
  repeated ContextDirEntry entries = 3;
}

// Read
message ContextReadRequest {
  string path = 1;
  int64 offset = 2;
  int64 length = 3;  // 0 means read to end
}

message ContextReadResponse {
  bool ok = 1;
  string error = 2;
  bytes data = 3;
}

// Write
message ContextWriteRequest {
  string path = 1;
  bytes data = 2;
  int64 offset = 3;
}

message ContextWriteResponse {
  bool ok = 1;
  string error = 2;
  int32 written = 3;
}

// Create
message ContextCreateRequest {
  string path = 1;
  uint32 mode = 2;
}

message ContextCreateResponse {
  bool ok = 1;
  string error = 2;
}

// Delete
message ContextDeleteRequest {
  string path = 1;
}

message ContextDeleteResponse {
  bool ok = 1;
  string error = 2;
}

// Mkdir
message ContextMkdirRequest {
  string path = 1;
  uint32 mode = 2;
}

message ContextMkdirResponse {
  bool ok = 1;
  string error = 2;
}

// Rename
message ContextRenameRequest {
  string old_path = 1;
  string new_path = 2;
}

message ContextRenameResponse {
  bool ok = 1;
  string error = 2;
}

// Truncate
message ContextTruncateRequest {
  string path = 1;
  int64 size = 2;
}

message ContextTruncateResponse {
  bool ok = 1;
  string error = 2;
}

// Symlink
message ContextSymlinkRequest {
  string target = 1;   // What the link points to
  string link_path = 2; // The symlink path
}

message ContextSymlinkResponse {
  bool ok = 1;
  string error = 2;
}

// Readlink
message ContextReadlinkRequest {
  string path = 1;
}

message ContextReadlinkResponse {
  bool ok = 1;
  string error = 2;
  string target = 3;
}

// ListTree - efficient subtree listing for prefetching
message ListTreeRequest {
  string path = 1;                    // Root path to list from
  int32 depth = 2;                    // Max depth (1 or 2, 0 = unlimited)
  int32 max_keys = 3;                 // Pagination limit (default 1000)
  string continuation_token = 4;      // For pagination
}

message ListTreeResponse {
  bool ok = 1;
  string error = 2;
  repeated TreeEntry entries = 3;
  string next_token = 4;              // For pagination continuation
  bool truncated = 5;                 // True if more results available
}

message TreeEntry {
  string path = 1;      // Relative path from request root
  int64 size = 2;
  int64 mtime = 3;      // Unix timestamp
  uint32 mode = 4;      // File mode (S_IFDIR | 0755 for dirs, S_IFREG | 0644 for files)
  string etag = 5;      // For cache validation
}
